cmake_minimum_required(VERSION 2.6)
PROJECT(XRNetwork)

SET(Boost_USE_STATIC_LIBS OFF)
SET(boost_USE_MULTITHREAD ON)
FIND_PACKAGE(Boost 1.42.0 REQUIRED COMPONENTS system thread filesystem)

IF(Boost_FOUND)
	INCLUDE_DIRECTORIES($(Boost_INCLUDE_DIRS))
	LINK_DIRECTORIES($(Boost_LIBRARY_DIRS))
ENDIF(Boost_FOUND)

SET(USE_LIBS $Boost_SYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_REGEX_LIBRARY})

ADD_EXECUTABLE(service nr_service_console.cpp)
TARGET_LINK_LIBRARIES(service ${USED_LIBS})

ADD_EXECUTABLE(client nr_client.cpp)
TARGET_LINK_LIBRARIES(client ${USED_LIBS})
